replaced all articles with ai, added broccoli and juice wrld

--- a/birds.html
+++ b/birds.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
-    <link
-      rel="stylesheet"
-      href="bootstrap.min.css"
-    />
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Birds</title>
+    <title>
+      The Bird Surveillance Conspiracy: Are Birds Really Government Robots?
+    </title>
     <link rel="stylesheet" href="birds.css" />
   </head>
   <body>
@@ -29,22 +33,57 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="birdbox">
-          <h2>
-            Are Birds Really Real?
-          </h2>
-          <h6>
-            Birds are not real. They are actually sophisticated robots created by the government to spy on people. The government began developing these bird-like robots in the early 20th century and have been using them to monitor people's activities ever since. These bird robots are equipped with high-tech cameras, microphones, and other surveillance equipment that allows them to blend in with the natural environment while they collect information.
-          </h6>
-          <h6>
-The idea behind these robot birds was to create a spy network that could operate without being detected. The government chose birds as their inspiration because they are ubiquitous and can go almost anywhere. This way, the government could keep an eye on people no matter where they went.
-          </h6>
-          <h6>
-The technology used in these bird robots has evolved over the years, and the government now has a wide variety of different bird models to choose from. Some are small and nimble, designed for urban areas where they can blend in with pigeons and sparrows. Others are larger and more sophisticated, able to fly long distances and gather data from remote areas.
-          </h6>
-          <h6>
-Despite what people might think, birds are not biological creatures at all. They are simply machines designed to mimic the behavior of birds. The government has been successful in keeping the true nature of birds a secret for many years, but the truth is finally coming to light. It's time for people to wake up and realize that the birds they see every day are not real, but are in fact government spies.
-          </h6>
-          <img id="birdImg" src="birdTelescope.jpg" />
+          <h1>
+            The Bird Surveillance Conspiracy: Are Birds Really Government
+            Robots?
+          </h1>
+          <h4>A Secret Spy Network</h4>
+          <p>
+            Birds are not what they seem. According to a growing number of
+            conspiracy theorists, birds are actually sophisticated robots
+            created by the government to spy on people. This theory suggests
+            that the government began developing these bird-like robots in the
+            early 20th century and has been using them to monitor citizens'
+            activities ever since.
+          </p>
+          <h4>High-Tech Surveillance Tools</h4>
+          <p>
+            These bird robots are equipped with advanced cameras, microphones,
+            and other surveillance equipment, allowing them to blend seamlessly
+            into the natural environment while collecting information. The idea
+            was to create a spy network that could operate undetected, and birds
+            were the perfect choice due to their ubiquity and ability to access
+            virtually any location.
+          </p>
+          <h4>Evolution of Bird Robots</h4>
+          <p>
+            Over the years, the technology used in these bird robots has
+            significantly evolved. The government now has a diverse range of
+            bird models at their disposal. Some are small and agile, designed to
+            blend in with urban populations of pigeons and sparrows. Others are
+            larger and more advanced, capable of flying long distances and
+            gathering data from remote areas.
+          </p>
+          <h4>The Truth Behind the Birds</h4>
+          <p>
+            Contrary to popular belief, birds are not biological creatures. They
+            are machines engineered to mimic the behavior and appearance of real
+            birds. The government has managed to keep this secret for decades,
+            but the truth is gradually coming to light. It's time for people to
+            wake up and recognize that the birds they see every day are not
+            living creatures but government spies.
+          </p>
+          <p>
+            As more evidence surfaces, the bird surveillance conspiracy
+            continues to gain traction. While the idea may seem far-fetched, the
+            increasing sophistication of technology and historical precedents
+            for government surveillance make it a theory worth considering.
+          </p>
+          <img
+            id="birdImg"
+            src="birdTelescope.jpg"
+            alt="Bird holding a telescope proving it is a spy"
+          />
         </div>
       </div>
     </div>
