--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     ></script>
     <!-- End Cloudflare Web Analytics -->
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
@@ -19,7 +19,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RealFacts: Home</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="topnav" id="myTopnav">
@@ -37,7 +40,7 @@
         </div>
         <div class="cards">
           <div class="card">
-            <h2>The Flat Earth: Unveiling the Greatest Cover-Up in History</h2>
+            <h3>The Flat Earth: Unveiling the Greatest Cover-Up in History</h3>
             <img
               id="earthphoto"
               src="earthphoto.jpg"
@@ -48,7 +51,7 @@
             </form>
           </div>
           <div class="card">
-            <h2>Exotic Vaccine Technology: A Dystopian Reality</h2>
+            <h3>Exotic Vaccine Technology: A Dystopian Reality</h3>
             <img
               id="vaccineBrain"
               src="vaccineBrain.png"
@@ -59,14 +62,20 @@
             </form>
           </div>
           <div class="card">
-            <h2>Did the Titanic Really Ever Sink?</h2>
+            <h3>
+              The Titanic Switch Theory: Uncovering the Greatest Maritime
+              Mystery
+            </h3>
             <img id="titanicjpg" src="titanic.jpg" alt="Image of Titanic" />
             <form action="titanic.html">
               <input id="titanicbutton" type="submit" value="Read Article" />
             </form>
           </div>
           <div class="card">
-            <h2>birds</h2>
+            <h3>
+              The Bird Surveillance Conspiracy: Are Birds Really Government
+              Robots?
+            </h3>
             <img
               id="birdfishjpg"
               src="birdfish.jpg"
@@ -77,14 +86,19 @@
             </form>
           </div>
           <div class="card">
-            <h2>bees</h2>
+            <h3>
+              The Hidden Truth About Bees: Antique Government Security Drones
+            </h3>
             <img id="beejpg" src="bee.jpg" alt="Picture of Bee" />
             <form action="bees.html">
               <input id="beebutton" type="submit" value="Read Article" />
             </form>
           </div>
           <div class="card">
-            <h2>animals</h2>
+            <h3>
+              Are Animals Really Advanced Robots? The Theory of Artificial
+              Wildlife
+            </h3>
             <img
               id="animaljpg"
               src="bat.png"
@@ -95,13 +109,27 @@
             </form>
           </div>
           <div class="card">
-            <h2>Using Science to Find Obama's Last Name</h2>
+            <h3>Using Science to Find Obama's Last Name</h3>
             <img
               id="obamajpg"
               src="obama.jpg"
               alt="Picture of a fake bat because animals are'nt real"
             />
             <form action="obama.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div class="card">
+            <h3>The Broccoli War: How a Vegetable Created School</h3>
+            <img id="obamajpg" src="broccoliguy.png" alt="broccoliguy" />
+            <form action="broccoli.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div class="card">
+            <h3>The Juice WRLD Conspiracy: Is He Still Alive?</h3>
+            <img id="obamajpg" src="juicewrldalive.webp" alt="juiceworld" />
+            <form action="juicewrld.html">
               <input id="animalbutton" type="submit" value="Read Article" />
             </form>
           </div>
