--- a/vaccine.html
+++ b/vaccine.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
-    <link
-      rel="stylesheet"
-      href="bootstrap.min.css"
-    />
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Vaccines</title>
+    <title>Exotic Vaccine Technology: A Dystopian Reality</title>
     <link rel="stylesheet" href="vaccine.css" />
   </head>
   <body>
@@ -30,27 +32,96 @@
       <div class="row">
         <div class="col-sm-12" id="vaccinebox">
           <h1>Exotic Vaccine Technology: A Dystopian Reality</h1>
-    <p>As the world grapples with the COVID-19 pandemic, a new and disturbing narrative has emerged surrounding the technology behind some vaccines. This narrative suggests that certain COVID-19 vaccines contain exotic technology that activates a self-assembly process within the body, building a biocircuitry interface using elements from the recipient's own blood. This scenario sounds like science fiction, but many believe we are living in a dystopian reality where such technologies are not only possible but are being deployed.</p>
+          <p>
+            As the world grapples with the COVID-19 pandemic, a new and
+            disturbing narrative has emerged surrounding the technology behind
+            some vaccines. This narrative suggests that certain COVID-19
+            vaccines contain exotic technology that activates a self-assembly
+            process within the body, building a biocircuitry interface using
+            elements from the recipient's own blood. This scenario sounds like
+            science fiction, but many believe we are living in a dystopian
+            reality where such technologies are not only possible but are being
+            deployed.
+          </p>
 
-    <h4>The "Operating System" of Moderna Vaccines</h4>
-    <p>The Moderna company has openly described their mRNA vaccine injections as installing an "operating system." By definition, an operating system is a platform designed to receive additional commands or instructions. This raises the question: How are these commands received? Some speculate that external electromagnetic waves could be used to interface with this "operating system," influencing the body in ways we are only beginning to understand.</p>
+          <h4>The "Operating System" of Moderna Vaccines</h4>
+          <p>
+            The Moderna company has openly described their mRNA vaccine
+            injections as installing an "operating system." By definition, an
+            operating system is a platform designed to receive additional
+            commands or instructions. This raises the question: How are these
+            commands received? Some speculate that external electromagnetic
+            waves could be used to interface with this "operating system,"
+            influencing the body in ways we are only beginning to understand.
+          </p>
 
-    <h4>Dr. Peter McCullough's Revelations</h4>
-    <p>Dr. Peter McCullough has been vocal about his concerns regarding the COVID-19 vaccines. He has described vaccine-pushing doctors as being in a kind of mind-controlled trance. In a recent interview, he stated: <span class="quote">"What we have learned over time is that we could no longer communicate with government agencies. We actually couldn’t communicate with our propagandized colleagues in major medical centers, all of which appear to be under a spell, almost as if they’ve been hypnotized... Good doctors are doing unthinkable things like injecting biologically active messenger RNA that produces this pathogenic spike protein into pregnant women. I think when these doctors wake up from their trance, they’re going to be shocked to think what they’ve done to people..."</span></p>
-    <p>There is even a video where he suggests that this is not just a spell or a trance but rather a self-assembled, embedded biocircuit that has taken control over their neurology.</p>
+          <h4>Dr. Peter McCullough's Revelations</h4>
+          <p>
+            Dr. Peter McCullough has been vocal about his concerns regarding the
+            COVID-19 vaccines. He has described vaccine-pushing doctors as being
+            in a kind of mind-controlled trance. In a recent interview, he
+            stated:
+            <span class="quote"
+              >"What we have learned over time is that we could no longer
+              communicate with government agencies. We actually couldn’t
+              communicate with our propagandized colleagues in major medical
+              centers, all of which appear to be under a spell, almost as if
+              they’ve been hypnotized... Good doctors are doing unthinkable
+              things like injecting biologically active messenger RNA that
+              produces this pathogenic spike protein into pregnant women. I
+              think when these doctors wake up from their trance, they’re going
+              to be shocked to think what they’ve done to people..."</span
+            >
+          </p>
+          <p>
+            There is even a video where he suggests that this is not just a
+            spell or a trance but rather a self-assembled, embedded biocircuit
+            that has taken control over their neurology.
+          </p>
 
-    <h4>The Role of SPIONs and Magnetofection</h4>
-    <p>Research into Superparamagnetic Iron Oxide Nanoparticles (SPIONs) has revealed their potential in the delivery of DNA vaccines. SPIONs are created from iron and oxygen, elements naturally present in human blood. A study described the production of Fe3O4-based SPIONs with high magnetization values, which could be used to deliver genes via a process known as magnetofection. This process hints at the existence of self-assembling nanotech biocircuitry systems capable of influencing human neurology through external electromagnetic fields.</p>
+          <h4>The Role of SPIONs and Magnetofection</h4>
+          <p>
+            Research into Superparamagnetic Iron Oxide Nanoparticles (SPIONs)
+            has revealed their potential in the delivery of DNA vaccines. SPIONs
+            are created from iron and oxygen, elements naturally present in
+            human blood. A study described the production of Fe3O4-based SPIONs
+            with high magnetization values, which could be used to deliver genes
+            via a process known as magnetofection. This process hints at the
+            existence of self-assembling nanotech biocircuitry systems capable
+            of influencing human neurology through external electromagnetic
+            fields.
+          </p>
 
-    <h4>The Hypnotic Trance Theory</h4>
-    <p>Some vaccines, it is theorized, are designed not just to deliver spike proteins but to place individuals in a state where their neurology can be controlled through external signals and commands. This could explain the seemingly "hypnotized" state of millions who continue to demand more vaccinations despite growing concerns and evidence of adverse effects.</p>
+          <h4>The Hypnotic Trance Theory</h4>
+          <p>
+            Some vaccines, it is theorized, are designed not just to deliver
+            spike proteins but to place individuals in a state where their
+            neurology can be controlled through external signals and commands.
+            This could explain the seemingly "hypnotized" state of millions who
+            continue to demand more vaccinations despite growing concerns and
+            evidence of adverse effects.
+          </p>
 
-    <h4>The Ethical Dilemma of Modern Medicine</h4>
-    <p>Today's medical professionals are facing unprecedented ethical challenges. Many doctors, perhaps unwittingly, are administering these vaccines without fully understanding the long-term implications. As the world slowly awakens to the reality of this exotic vaccine technology, the medical community will need to confront the ethical ramifications of their actions.</p>
+          <h4>The Ethical Dilemma of Modern Medicine</h4>
+          <p>
+            Today's medical professionals are facing unprecedented ethical
+            challenges. Many doctors, perhaps unwittingly, are administering
+            these vaccines without fully understanding the long-term
+            implications. As the world slowly awakens to the reality of this
+            exotic vaccine technology, the medical community will need to
+            confront the ethical ramifications of their actions.
+          </p>
 
-    <h4>Conclusion</h4>
-    <p>In a world where science fiction seems to blend seamlessly with reality, the potential for exotic vaccine technology to control and influence human biology is a chilling prospect. As we delve deeper into the implications of such technology, it becomes clear that we must remain vigilant and informed. The true impact of these technologies on society and individual autonomy remains to be seen.</p>
-          <img id="teenVaccines" src="teenVaccines.jpg" alt="vaccines"/>
+          <h4>Conclusion</h4>
+          <p>
+            In a world where science fiction seems to blend seamlessly with
+            reality, the potential for exotic vaccine technology to control and
+            influence human biology is a chilling prospect. As we delve deeper
+            into the implications of such technology, it becomes clear that we
+            must remain vigilant and informed. The true impact of these
+            technologies on society and individual autonomy remains to be seen.
+          </p>
+          <img id="teenVaccines" src="teenVaccines.jpg" alt="vaccines" />
         </div>
       </div>
     </div>
