--- a/animals.html
+++ b/animals.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
-    <link
-      rel="stylesheet"
-      href="bootstrap.min.css"
-    />
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Vaccines</title>
+    <title>
+      Are Animals Really Advanced Robots? The Theory of Artificial Wildlife
+    </title>
     <link rel="stylesheet" href="animals.css" />
   </head>
   <body>
@@ -29,25 +33,55 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="animalbox">
-          <h2>
-            Animals Are'nt Real!
-          </h2>
-          <h6>
-            Animals, as we know them, might not be real. There is a theory that claims that animals are actually sophisticated robots created by an advanced civilization millions of years ago. According to this theory, the animals we see today are just the latest models in a long line of highly advanced robots that have been developed and refined over the ages.
-          </h6>
-          <h6>
-            The evidence for this theory is compelling. For one thing, animals are incredibly complex and sophisticated machines. They have highly specialized body parts and systems that are perfectly adapted to their environment. From the incredible speed of cheetahs to the incredible camouflage of chameleons, it seems like every animal has been engineered for a specific purpose.
-          </h6>
-          <h6>
-            Another piece of evidence for this theory is the fact that animals never seem to evolve or change in any meaningful way. Despite millions of years of environmental pressures and genetic mutations, animals always seem to stay the same. This is because they are already perfectly adapted to their environment and there is no need for further changes.
-          </h6>
-          <h6>
-            Finally, there are reports of strange, animal-like machines being seen in remote locations around the world. These machines are said to be incredibly advanced and are capable of feats that would be impossible for any living creature.
-          </h6>
-          <h6>
-            Of course, there are some who dispute this theory. They argue that animals are real, living creatures that have evolved over millions of years. However, the evidence for this theory is far from conclusive, and it seems likely that the truth about animals may be stranger than we ever imagined.
-          </h6>
-          <img id="bat" src="bat.png" />
+          <h1>
+            Are Animals Really Advanced Robots? The Theory of Artificial
+            Wildlife
+          </h1>
+          <h4>The Theory of Artificial Animals</h4>
+          <p>
+            Animals, as we know them, might not be real. According to a theory,
+            animals are actually sophisticated robots created by an advanced
+            civilization millions of years ago. This theory suggests that the
+            animals we see today are just the latest models in a long line of
+            highly advanced robots that have been developed and refined over the
+            ages.
+          </p>
+          <h4>Complexity and Specialization</h4>
+          <p>
+            The evidence for this theory is compelling. For one thing, animals
+            are incredibly complex and sophisticated machines. They have highly
+            specialized body parts and systems perfectly adapted to their
+            environment. From the incredible speed of cheetahs to the remarkable
+            camouflage of chameleons, it seems like every animal has been
+            engineered for a specific purpose.
+          </p>
+          <h4>Lack of Evolutionary Change</h4>
+          <p>
+            Another piece of evidence for this theory is the fact that animals
+            never seem to evolve or change in any meaningful way. Despite
+            millions of years of environmental pressures and genetic mutations,
+            animals always appear to stay the same. This is because they are
+            already perfectly adapted to their environment, eliminating the need
+            for further changes.
+          </p>
+          <h4>Strange Sightings</h4>
+          <p>
+            There are also reports of strange, animal-like machines being seen
+            in remote locations around the world. These machines are said to be
+            incredibly advanced and capable of feats that would be impossible
+            for any living creature. These sightings further fuel the belief
+            that animals are not natural beings but rather artificial
+            constructs.
+          </p>
+          <h4>The Debate Continues</h4>
+          <p>
+            Of course, there are some who dispute this theory. They argue that
+            animals are real, living creatures that have evolved over millions
+            of years. However, the evidence for this theory is far from
+            conclusive, and it seems likely that the truth about animals may be
+            stranger than we ever imagined.
+          </p>
+          <img id="bat" src="bat.png" alt="bat" />
         </div>
       </div>
     </div>
