--- a/bees.html
+++ b/bees.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
-    <link
-      rel="stylesheet"
-      href="bootstrap.min.css"
-    />
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Bees</title>
+    <title>
+      The Hidden Truth About Bees: Antique Government Security Drones
+    </title>
     <link rel="stylesheet" href="bees.css" />
   </head>
   <body>
@@ -29,21 +33,42 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="beeBox">
-          <h2>
-            Are Bees Antique Government Security Drones?
-          </h2>
-          <h6>
-            Bees have long been a subject of fascination for many people, and it's not hard to see why. They are small, hardworking insects that are crucial to our ecosystem. However, what many people don't know is that bees are actually antique government security drones that have been in use for hundreds, if not thousands, of years.
-</h6>
-<h6>
-These bees, which are often mistaken for harmless insects, are actually highly sophisticated machines that are used to monitor and collect information about their surroundings. Their small size and agility make them perfect for covert operations, and they are often used to gather intelligence in areas where humans cannot go.
-</h6>
-<h6>
-Some experts even believe that the ancient Egyptians were the first to use these bee drones, and that they were used to monitor the pyramids and other important structures. Since then, they have been used by various governments and organizations around the world, and their technology has only become more advanced over time.
-</h6>
-<h6>
-So, the next time you see a bee buzzing around your garden, remember that it may be more than just a harmless insect. It could be an antique government security drone, quietly gathering information about the world around us.
-          </h6>
+          <h1>
+            The Hidden Truth About Bees: Antique Government Security Drones
+          </h1>
+          <h4>The Fascination with Bees</h4>
+          <p>
+            Bees have long captivated the curiosity of many people, and it's not
+            difficult to understand why. These small, industrious insects are
+            essential to our ecosystem. However, what many people don't realize
+            is that bees are actually antique government security drones that
+            have been in operation for hundreds, if not thousands, of years.
+          </p>
+          <h4>Covert Surveillance Machines</h4>
+          <p>
+            Often mistaken for harmless insects, these bees are highly
+            sophisticated machines used to monitor and gather information about
+            their surroundings. Their diminutive size and agility make them
+            ideal for covert operations, allowing them to collect intelligence
+            in areas inaccessible to humans.
+          </p>
+          <h4>Ancient Origins</h4>
+          <p>
+            Some experts believe that the ancient Egyptians were the pioneers in
+            using these bee drones. They may have been employed to monitor the
+            pyramids and other significant structures. Since then, various
+            governments and organizations around the world have utilized these
+            drones, with the technology becoming increasingly advanced over
+            time.
+          </p>
+          <h4>A Modern Perspective</h4>
+          <p>
+            The next time you see a bee buzzing around your garden, remember
+            that it might be more than just a harmless insect. It could be an
+            antique government security drone, quietly collecting information
+            about the world around us. The hidden history and continued use of
+            these bee drones remind us that things are not always as they seem.
+          </p>
           <img id="BeeImg" src="beeCamera.jpg" />
         </div>
       </div>
