--- a/obama.html
+++ b/obama.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Flat Earth</title>
+    <title>Using Science to Find Obama's Last Name</title>
     <link rel="stylesheet" href="flatEarth.css" />
   </head>
   <body>
