--- a/titanic.html
+++ b/titanic.html
@@ -2,16 +2,23 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Vaccines</title>
+    <title>
+      The Titanic Switch Theory: Uncovering the Greatest Maritime Mystery
+    </title>
     <link rel="stylesheet" href="titanic.css" />
   </head>
   <body>
@@ -26,108 +33,114 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="titanicbox">
-          <h2>Did the Titanic Really Ever Sink?</h2>
-          <h6>
-            Proponents of the swap theory have pointed out disparities in the
-            number of portholes on the ships. The Olympic had 16 and the Titanic
-            had 14. Photographs taken of the Titanic in dry dock show it with 14
-            portholes. But by the time of its doomed maiden voyage it now had
-            16, just like the Olympic. Was this evidence that the ships had been
-            swapped or just that they had added two extra portholes as part of
-            aesthetic changes to the Titanic? During construction — top, Titanic
-            had 14 portholes. By its maiden voyage — bottom, it had 16 Other
-            evidence supports the switch ,  the windows on the Olympic were
-            somewhat unevenly spaced, but more evenly spaced on the Titanic.
-            Again, by the time of its maiden voyage, the Titanic had acquired
-            unevenly spaced windows like the Olympic. List to port
-          </h6>
-          <h6>
-            The damage to the Olympic after its collision with the Hawke lent it
-            a noticeable and permanent 2˚ list to port. The undamaged Titanic
-            had no such list. Lawrence Beesley reported the Titanic listed to
-            port like the Olympic However, one second-class passenger who
-            survived the sinking -  Lawrence Beesley, later reported the Titanic
-            did, in fact, list to port, stating "the Titanic listed to port...It
-            was plain she did so, for the sky-line and sea on the port side were
-            visible most of the time and on the starboard only sky". Beesley, a
-            science teacher, was considered a reliable observer, and would later
-            write one of the first books about the Titanic disaster. Rumours
-            amongst crew
-          </h6>
-          <h6>
-            There was a nationwide coal strike during the launch of the Titanic,
-            leading to thousands of firemen, boiler stokers and greasers short
-            of work. Yet despite this the Titanic struggled to find crew, with
-            many men refusing to work on the ship at any price. Rumours were
-            circulating amongst the workers at Harland and Wolff that the ships
-            had been swapped as part of an insurance scam, and Titanic was to be
-            sunk. Did foreknowledge of the sinking of the Titanic frighten men
-            off from wanting to work on the ship? Titanic during its
-            construction at the Harland and Wolff shipyard, Belfast Despite the
-            immense fanfare and hype that surrounded the Titanic launch, it was
-            only just over half full when it left Southampton on its doomed
-            voyage. Did White Star want to minimise the number of passengers
-            because it intended to scuttle the ship? Or had the rumours of the
-            insurance scam spread outside of the shipyards? Several last minute
-            cancellations from high profile passengers certainly suggest some
-            kind of foreknowledge. Last minute cancellations
-          </h6>
-          <h6>
-            Many of the richest and most prestigious names in early 20th-century
-            society were booked onto the Titanic. JP Morgan  -  the
-            international financier who owned the White Star’s parent company,
-            was due to travel on the Titanic but cancelled his trip a few days
-            before the departure, claiming illness. JP Morgan and other
-            prominent figures cancelled at the last minute A New York Times
-            reported discovered this to be a lie, Morgan was actually seen
-            perfectly well with his mistress in France on the very day Titanic
-            sunk. Industrialist Henry Clay Frick and his wife, banker Horace J.
-            Harding and billionaire George Washington Vanderbilt - all connected
-            to Morgan, were amongst several other prominent figures who
-            cancelled at the last minute. Californian
-          </h6>
-          <h6>
-            The SS Californian, also owned by JP Morgan, was a large passenger
-            ship that was ultimately blamed for the loss of life on the Titanic.
-            It behaved somewhat oddly around the time of the Titanic’s voyage.
-            Carrying no passengers,  it steamed into the middle of the Atlantic,
-            stopped and waited. It’s only cargo was 3000 woollen blankets and
-            jumpers. What was the purpose behind this curious manoeuvre? Was the
-            Californian intended to rescue the Titanic’s passengers after its
-            deliberate sinking? Edith Russell, a survivor of the sinking, was
-            adamant that Titanic officers assured her the Californian was on its
-            way. Author Robin Gardiner suggests serious navigation errors lead
-            to the Californian stopping in the wrong area, some 12 miles away
-            from the Titanic. The lifeboats on the Titanic weren’t sufficient to
-            save all the passengers With the Californian unable to complete its
-            rescue mission the Titanic was doomed, and some 1500 passengers and
-            crew perished in one of the worst maritime disasters in modern
-            history. The wreck
-          </h6>
-          <h6>
-            The wreck of the Titanic was discovered by Robert Ballard in 1985.
-            Some evidence from the wreck supports the switch theory. The stamp
-            401,  the ID number used for the Titanic at Harland and Wolff, can
-            be seen on the Titanic’s propeller. However, some authors have
-            suggested that the Titanic propeller was fitted to the Olympic
-            during its repair following the collision with the Hawke. If true,
-            this would be strong evidence that the vessel on the ocean floor was
-            really the Olympic. The wreck of the Titanic was found by Robert
-            Ballard in 1985 What appear to be the letters M and P can also be
-            seen on the side of the wreck. Could that be the remains of the
-            ship's original etched nameplate -  ‘OLYMPIC’, covered over with the
-            Titanic’s as part of the scam The wreck appears to show some
-            evidence of the grey paint used as an undercoat on the Olympic. The
-            Titanic used black paint for its undercoat. Lack of media scrutiny
-          </h6>
-          <h6>
-            Insurance scams and maritime fraud were common at the time of the
-            Titanic’s sinking. Whilst it seems unlikely such a scam could be
-            pulled off today, the lack of media coverage in 1912 makes it more
-            credible. Only one film survives of the Titanic and the photo record
-            is also scant. With the two ships extremely similar, it is argued
-            that only the most eagle-eyed would ever have spotted the swap.
-          </h6>
+          <h1>
+            The Titanic Switch Theory: Uncovering the Greatest Maritime Mystery
+          </h1>
+          <h4>Disparities in Portholes and Windows</h4>
+          <p>
+            Proponents of the Titanic switch theory argue that the famed RMS
+            Titanic and its sister ship, the RMS Olympic, were swapped in an
+            elaborate insurance scam. Various pieces of evidence have been
+            presented over the years, fueling this controversial theory.
+          </p>
+          <p>
+            One of the most cited discrepancies involves the number of
+            portholes. The Olympic originally had 16 portholes, while the
+            Titanic had 14. Photographs of the Titanic in dry dock clearly show
+            it with 14 portholes. However, by the time of its ill-fated maiden
+            voyage, the Titanic had acquired 16 portholes, just like the
+            Olympic. This change raises questions: were these additional
+            portholes part of aesthetic modifications, or were they evidence of
+            the ship swap?
+          </p>
+          <p>
+            Additionally, the spacing of the windows between the two ships
+            provides another clue. The Olympic's windows were unevenly spaced,
+            whereas the Titanic's were evenly spaced. Yet, by the maiden voyage,
+            the Titanic’s windows had adopted the uneven spacing characteristic
+            of the Olympic.
+          </p>
+          <h4>List to Port: An Unseen Damage</h4>
+          <p>
+            The Olympic suffered a collision with the HMS Hawke, resulting in a
+            permanent 2-degree list to port. The undamaged Titanic should not
+            have had this list. However, Lawrence Beesley, a second-class
+            passenger who survived the Titanic sinking, reported that the ship
+            listed to port. Beesley, a science teacher and reliable observer,
+            stated,
+            <span class="quote"
+              >"The Titanic listed to port...It was plain she did so, for the
+              sky-line and sea on the port side were visible most of the time
+              and on the starboard only sky."</span
+            >
+            This observation suggests that the Titanic might have had the same
+            structural issues as the Olympic.
+          </p>
+          <h4>Rumors Amongst the Crew</h4>
+          <p>
+            During the Titanic's launch, a nationwide coal strike left thousands
+            of firemen, boiler stokers, and greasers out of work. Despite this,
+            the Titanic struggled to find a crew, with many men refusing to work
+            on the ship. Rumors circulated among workers at Harland and Wolff
+            shipyard that the ships had been swapped as part of an insurance
+            scam and that the Titanic was intended to be sunk. This supposed
+            foreknowledge may have deterred workers from boarding the ship.
+          </p>
+          <h4>Notable Last-Minute Cancellations</h4>
+          <p>
+            Several high-profile passengers canceled their trips on the Titanic
+            at the last minute, raising suspicions of prior knowledge. J.P.
+            Morgan, the financier who owned the White Star Line's parent
+            company, canceled his trip days before departure, citing illness.
+            However, a New York Times reporter discovered that Morgan was seen
+            in France with his mistress on the day the Titanic sank. Other
+            prominent figures, such as industrialist Henry Clay Frick, banker
+            Horace J. Harding, and billionaire George Washington Vanderbilt,
+            also canceled at the last minute, all of whom were connected to
+            Morgan.
+          </p>
+          <h4>The Mysterious SS Californian</h4>
+          <p>
+            The SS Californian, also owned by J.P. Morgan, played a
+            controversial role in the Titanic disaster. It carried no passengers
+            and had 3,000 woolen blankets and jumpers. The Californian steamed
+            into the middle of the Atlantic, stopped, and waited. Survivor Edith
+            Russell claimed Titanic officers assured her the Californian was on
+            its way. However, due to navigation errors, the Californian stopped
+            12 miles away from the Titanic, unable to rescue passengers, leading
+            to the tragic loss of approximately 1,500 lives.
+          </p>
+          <h4>The Wreck and Its Revelations</h4>
+          <p>
+            The Titanic's wreck was discovered by Robert Ballard in 1985. Some
+            findings from the wreck support the switch theory. The stamp "401,"
+            the ID number for the Titanic at Harland and Wolff, is visible on
+            the Titanic’s propeller. Some authors suggest this propeller was
+            fitted to the Olympic after its collision with the Hawke, indicating
+            the wreck might actually be the Olympic.
+          </p>
+          <p>
+            What appear to be the letters "M" and "P" are visible on the side of
+            the wreck, possibly remnants of the name "OLYMPIC" covered over with
+            "TITANIC." The wreck also shows traces of gray paint used as an
+            undercoat on the Olympic, whereas the Titanic used black paint.
+          </p>
+          <h4>Lack of Media Scrutiny</h4>
+          <p>
+            Insurance scams and maritime fraud were common in the early 20th
+            century. The lack of extensive media coverage in 1912 makes the
+            Titanic switch theory more plausible. Only one film of the Titanic
+            exists, and the photographic record is limited. Given the extreme
+            similarity between the two ships, only the most attentive observers
+            would have noticed the swap.
+          </p>
+          <h4>Conclusion</h4>
+          <p>
+            While the Titanic switch theory remains a contentious topic, the
+            discrepancies in physical evidence and the unusual circumstances
+            surrounding the ship's maiden voyage continue to intrigue
+            researchers and conspiracy theorists alike.
+          </p>
           <img
             id="titanicImg"
             src="https://shorthand-social.imgix.net/prod/story/jCPyIbzzPVc/media/aa324800ec5711e58172cfb1db5e8826/original.jpg?w=1500&h=1500&fit=clip&fm=jpg&q=75"
