fixed broccoli title

--- a/broccoli.html
+++ b/broccoli.html
@@ -16,7 +16,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Broccoli War: How a Vegetable Created School</title>
+    <title>The Broccoli War: How a Vegetable Kept Schools in Business</title>
     <link rel="stylesheet" href="vaccine.css" />
   </head>
   <body>
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="vaccinebox">
-          <h1>The Broccoli War: How a Vegetable Created School</h1>
+          <h1>The Broccoli War: How a Vegetable Kept Schools in Business</h1>
           <h4>The Origins of School: A Broccoli Debate</h4>
           <p>
             Broccoli is the reason why school exists. Two people were arguing
