--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </form>
           </div>
           <div class="card">
-            <h3>The Broccoli War: How a Vegetable Created School</h3>
+            <h3>The Broccoli War: How a Vegetable Kept Schools in Business</h3>
             <img id="obamajpg" src="broccoliguy.png" alt="broccoliguy" />
             <form action="broccoli.html">
               <input id="animalbutton" type="submit" value="Read Article" />
