--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
           <div class="card">The moon landing was faked</div>
           <div class="card">Bigfoot is real</div>
           <div class="card">The illuminati is real</div>
+          <div class="card">Excercise isnt real</div>
         </div>
       </div>
     </div>
