fixed obama picture

--- a/obama.html
+++ b/obama.html
@@ -52,8 +52,7 @@
 
     <h4>Conclusion</h4>
     <p>In the quest to uncover Barack Obama's true last name, science points us to the intriguing possibility that his real name is indeed "Obama Barack." Through linguistic analysis, historical documentation, and genetic evidence, the name "Obama Barack" stands as a plausible alternative. This investigation not only challenges what we know but also exemplifies how science can be used to explore and validate even the most unconventional truths.</p>
-          <img src="realImageOfEarth.jpg" alt="Real image of the turtle below the Flat Earth. Real hidden photo
-            from NASA." />
+          <img src="barackobama.webp" alt="Photo of obama upset about his name being leaked" />
         </div>
       </div>
     </div>
