--- a/index.html
+++ b/index.html
@@ -133,7 +133,13 @@
               <input id="animalbutton" type="submit" value="Read Article" />
             </form>
           </div>
-          <div class="card">Electricity isnt real</div>
+          <div class="card">
+            <h3>Electricity: The Invisible Lie That Powers the Deception</h3>
+            <img id="obamajpg" src="electricity.jpg" alt="juiceworld" />
+            <form action="electricity.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
           <div class="card">Australia isn't real</div>
           <div class="card">The moon landing was faked</div>
           <div class="card">Bigfoot is real</div>
