--- a/index.html
+++ b/index.html
@@ -135,8 +135,15 @@
           </div>
           <div class="card">
             <h3>Electricity: The Invisible Lie That Powers the Deception</h3>
-            <img id="obamajpg" src="electricity.jpg" alt="juiceworld" />
+            <img id="obamajpg" src="electricity.jpg" alt="Electricity" />
             <form action="electricity.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div class="card">
+            <h3>The JFK Reincarnation Theory: Was He Abraham Lincoln?</h3>
+            <img id="obamajpg" src="download.jpeg" alt="Lincoln-Kennedy" />
+            <form action="jfklincolnsameperson.html">
               <input id="animalbutton" type="submit" value="Read Article" />
             </form>
           </div>
